--- a/gatekeeper/valid-image-registry.yaml
+++ b/gatekeeper/valid-image-registry.yaml
@@ -7,6 +7,12 @@ spec:
     spec:
       names:
         kind: ValidImageRegistry
+      validation:
+        # Schema for the `parameters` field
+        openAPIV3Schema:
+          properties:
+            registry:
+              type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
@@ -15,7 +21,7 @@ spec:
         violation[{"msg": msg}] {
           # Check image
           image := input.review.object.spec.containers[_].image
-          not startswith(image, "gcr.io/")
+          not startswith(image, input.parameters.registry)
 
           # If all above statements are true, return message
           msg := sprintf("image '%v' comes from untrusted registry", [image])
@@ -31,3 +37,5 @@ spec:
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
+  parameters:
+    registry: "gcr.io/"
