--- a/gatekeeper/valid-image-registry.yaml
+++ b/gatekeeper/valid-image-registry.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
@@ -33,7 +34,11 @@ metadata:
   name: pods-must-use-valid-image-registry
 spec:
   match:
-    excludedNamespaces: [ "kube-system", "gatekeeper-system", "monitoring", "logging" ]
+    excludedNamespaces:
+      - "kube-system"
+      - "gatekeeper-system"
+      - "monitoring"
+      - "logging"
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
